syntax = "proto3";

package cheers.comment.v1;


import "cheers/type/user/user.proto";
import "google/api/annotations.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/comment/v1;comment";

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {
    option (google.api.http) = {
      post: "/v1/comments"
      body: "*"
    };
  }

  rpc ListComment(ListCommentRequest) returns (ListCommentResponse) {
    option (google.api.http) = {
      get: "/v1/comments"
    };
  }
}

message ListCommentRequest {
  string post_id = 1;
}

message ListCommentResponse {
  repeated Comment comments = 1;
}

message Comment {
  string id = 1;
  string text = 2;
  string picture = 3;
  string username = 4;
  int64 create_time = 5;
}

message CreateCommentRequest {
  string post_id = 1;
  string comment = 2;
}

message CreateCommentResponse {
}
